.metadata/.plugins/org.eclipse.cdt.ui/oled_test.build.log
17:17:54 **** Incremental Build of configuration Debug for project oled_test ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L433xx -c -I../Core/Inc -I"C:/Users/miros/Desktop/Skola/Bakalarka/STM_variant/secured-vehicle-monitoring/oled_test/Drivers/OLED" -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:109:25: error: cast specifies array type
  109 |     ssd1306_WriteString((char[]) i, Font_16x26, Black);
      |                         ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

17:17:55 Build Failed. 2 errors, 0 warnings. (took 466ms)

